<resources>
    <string name="app_name">ShiftlabTestTask</string>
    <string name="greeting">Приветствие</string>
    <string name="hello_with_name">Привет, %s</string>
    <string name="ok">Ага</string>
    <string name="registration">Регистрация</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_second_name">Введите фамилию</string>
    <string name="enter_date_of_birth">Введите дату рождения</string>
    <string name="enter_password">Введите пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="name_help">Имя должно быть длиннее 2х символов</string>
    <string name="second_name_help">Фамилия должна быть длиннее 2х символов</string>
    <string name="date_of_birth_help">Дата формата dd.mm.yyyy</string>
    <string name="password_help">Минимум 1 цифра, 1 буква каждого регистра.\nБез пробелов</string>
    <string name="repeated_password_help">Пароли должны совпадать</string>
    <string name="future_date_help">Дата еще не наступила</string>
</resources>